Fixing media queries on mobile devices and tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -782,6 +782,11 @@ input {
 }
 
 @media screen and (max-width: 992px) {
+   /* Rules */
+   .rules h4 {
+    
+   } 
+
   /* Location */
   .addresses {
     margin-bottom: 0;
